gramatica.output
Grammar

    0 $accept: programa $end

    1 programa: variables_globales declara_objetos declara_funciones implementa_funciones EJECUTARPROGRAMA ALLAVE variables_locales bloque CLLAVE

    2 variables_globales: VARIABLES_GLOBALES bloque_variables

    3 bloque_variables: ACORCHETE bloque_variables_rep CCORCHETE

    4 bloque_variables_rep: /* empty */
    5                     | declara_variables bloque_variables_rep

    6 declara_variables: ENTERO IDENTIFICADOR declara_variables_atomica
    7                  | DECIMAL IDENTIFICADOR declara_variables_atomica
    8                  | TEXTO IDENTIFICADOR declara_variables_atomica
    9                  | BOOLEANO IDENTIFICADOR declara_variables_atomica
   10                  | MATRIZDECIMAL IDENTIFICADOR dimensiones declara_variables_matriz
   11                  | MATRIZENTERA IDENTIFICADOR dimensiones declara_variables_matriz
   12                  | CREAROBJETO IDENTIFICADOR declara_variables_objeto

   13 declara_variables_atomica: PUNTOYCOMA
   14                          | IGUAL expresion PUNTOYCOMA

   15 declara_variables_matriz: PUNTOYCOMA
   16                         | IGUAL declara_variables_matriz1 PUNTOYCOMA

   17 declara_variables_matriz1: asignacion_matriz
   18                          | IDENTIFICADOR

   19 declara_variables_objeto: PUNTOYCOMA
   20                         | ES IDENTIFICADOR PUNTOYCOMA

   21 asignacion_matriz: ALLAVE asignacion_matriz_rep CLLAVE

   22 asignacion_matriz_rep: /* empty */
   23                      | asignacion_matriz_valor PUNTOYCOMA asignacion_matriz_rep

   24 asignacion_matriz_valor: CTEENTERA asignacion_matriz_valor1
   25                        | CTEDECIMAL asignacion_matriz_valor1

   26 asignacion_matriz_valor1: /* empty */
   27                         | COMA asignacion_matriz_valor

   28 dimensiones: ACORCHETE exp CCORCHETE dimensiones_rep

   29 dimensiones_rep: /* empty */
   30                | ACORCHETE exp CCORCHETE

   31 expresion: exp expresion_condicional

   32 expresion_condicional: /* empty */
   33                      | op_booleanos exp

   34 op_booleanos: COMPARA
   35             | NEGACION
   36             | MAYORQUE
   37             | MENORQUE
   38             | MAYORIGUAL
   39             | MENORIGUAL
   40             | AMPERSAND
   41             | BARRA

   42 exp: termino exp_suma_resta

   43 exp_suma_resta: /* empty */
   44               | MAS exp
   45               | MENOS exp

   46 termino: factor termino_multi_divide

   47 termino_multi_divide: /* empty */
   48                     | POR termino
   49                     | ENTRE termino

   50 factor: APARENTESIS expresion CPARENTESIS
   51       | MAS factor_operando
   52       | MENOS factor_operando
   53       | factor_operando

   54 factor_operando: var_cte
   55                | llama_funcion

   56 var_cte: CTEENTERA
   57        | CTEDECIMAL
   58        | CTEBOOLEANO
   59        | CTETEXTO
   60        | IDENTIFICADOR

   61 declara_objetos: DECLARA_OBJETOS ACORCHETE declara_objetos_rep CCORCHETE

   62 declara_objetos_rep: /* empty */
   63                    | objeto declara_objetos_rep

   64 objeto: CLASE IDENTIFICADOR objeto_herencia ALLAVE atributos_globales declara_funciones implementa_funciones CLLAVE

   65 objeto_herencia: /* empty */
   66                | HIJODE IDENTIFICADOR

   67 atributos_globales: ATRIBUTOS_GLOBALES bloque_variables

   68 declara_funciones: DECLARA_FUNCIONES ACORCHETE declara_funciones_rep CCORCHETE

   69 declara_funciones_rep: /* empty */
   70                      | declaracion_prototipos declara_funciones_rep

   71 declaracion_prototipos: permiso IDENTIFICADOR APARENTESIS parametros CPARENTESIS REGRESA declaracion_prototipos_regresa PUNTOYCOMA

   72 permiso: PRIVADA
   73        | PUBLICA

   74 parametros: /* empty */
   75           | parametros_rep

   76 parametros_rep: IDENTIFICADOR DOSPUNTOS tipo parametros_rep1

   77 tipo: ENTERO
   78     | DECIMAL
   79     | BOOLEANO
   80     | TEXTO
   81     | MATRIZENTERA
   82     | MATRIZDECIMAL

   83 parametros_rep1: /* empty */
   84                | COMA parametros_rep

   85 declaracion_prototipos_regresa: tipo
   86                               | NADA

   87 implementa_funciones: IMPLEMENTA_FUNCIONES ACORCHETE implementa_funciones_rep CCORCHETE

   88 implementa_funciones_rep: /* empty */
   89                         | funciones implementa_funciones_rep

   90 funciones: IDENTIFICADOR APARENTESIS parametros CPARENTESIS ALLAVE variables_locales bloque CLLAVE

   91 variables_locales: VARIABLES_LOCALES bloque_variables

   92 bloque: /* empty */
   93       | estatuto bloque_rep

   94 bloque_rep: bloque

   95 estatuto: asignacion PUNTOYCOMA
   96         | escritura PUNTOYCOMA
   97         | llama_funcion PUNTOYCOMA
   98         | regresa PUNTOYCOMA
   99         | condicional
  100         | ciclo

  101 asignacion: IDENTIFICADOR asignacion1

  102 asignacion1: dimensiones IGUAL expresion
  103            | IGUAL asignacion2
  104            | FLECHA IDENTIFICADOR asignacion3 IGUAL asignacion2

  105 asignacion2: asignacion_matriz
  106            | expresion

  107 asignacion3: /* empty */
  108            | dimensiones

  109 lectura: LEERDELTECLADO APARENTESIS lectura1 CPARENTESIS

  110 lectura1: ENTERO
  111         | DECIMAL
  112         | BOOLEANO
  113         | TEXTO

  114 escritura: DESPLIEGA APARENTESIS escritura_valores CPARENTESIS

  115 escritura_valores: valores escritura_concatena
  116                  | IDENTIFICADOR escritura_valores1

  117 valores: CTEENTERA
  118        | CTEDECIMAL
  119        | CTETEXTO

  120 escritura_valores1: /* empty */
  121                   | CONCATENA escritura_valores
  122                   | dimensiones escritura_concatena

  123 escritura_concatena: /* empty */
  124                    | CONCATENA escritura_valores

  125 llama_funcion: IDENTIFICADOR llama_funcion_opcional APARENTESIS expresion CPARENTESIS
  126              | lectura

  127 llama_funcion_opcional: /* empty */
  128                       | FLECHA IDENTIFICADOR

  129 regresa: REGRESA expresion

  130 condicional: SI APARENTESIS expresion CPARENTESIS ALLAVE bloque CLLAVE condicional_ifelse

  131 condicional_ifelse: /* empty */
  132                   | SINO condicional_else

  133 condicional_else: ENTONCES APARENTESIS expresion CPARENTESIS ALLAVE bloque CLLAVE condicional_ifelse
  134                 | ALLAVE bloque CLLAVE

  135 ciclo: MIENTRAS APARENTESIS expresion CPARENTESIS ALLAVE bloque CLLAVE


Terminals, with rules where they appear

$end (0) 0
error (256)
DOSPUNTOS (258) 76
COMA (259) 27 84
ES (260) 20
CREAROBJETO (261) 12
VARIABLES_GLOBALES (262) 2
VARIABLES_LOCALES (263) 91
DECLARA_OBJETOS (264) 61
DECLARA_FUNCIONES (265) 68
IMPLEMENTA_FUNCIONES (266) 87
ATRIBUTOS_GLOBALES (267) 67
BOOLEANO (268) 9 79 112
ENTERO (269) 6 77 110
DECIMAL (270) 7 78 111
TEXTO (271) 8 80 113
NADA (272) 86
CLASE (273) 64
MATRIZENTERA (274) 11 81
MATRIZDECIMAL (275) 10 82
PRIVADA (276) 72
PUBLICA (277) 73
REGRESA (278) 71 129
HIJODE (279) 66
EJECUTARPROGRAMA (280) 1
LEERDELTECLADO (281) 109
DESPLIEGA (282) 114
SI (283) 130
SINO (284) 132
ENTONCES (285) 133
MIENTRAS (286) 135
FLECHA (287) 104 128
CONCATENA (288) 121 124
IGUAL (289) 14 16 102 103 104
MAS (290) 44 51
MENOS (291) 45 52
POR (292) 48
ENTRE (293) 49
PUNTOYCOMA (294) 13 14 15 16 19 20 23 71 95 96 97 98
APARENTESIS (295) 50 71 90 109 114 125 130 133 135
CPARENTESIS (296) 50 71 90 109 114 125 130 133 135
ALLAVE (297) 1 21 64 90 130 133 134 135
CLLAVE (298) 1 21 64 90 130 133 134 135
ACORCHETE (299) 3 28 30 61 68 87
CCORCHETE (300) 3 28 30 61 68 87
AMPERSAND (301) 40
BARRA (302) 41
COMPARA (303) 34
NEGACION (304) 35
MAYORQUE (305) 36
MENORQUE (306) 37
MAYORIGUAL (307) 38
MENORIGUAL (308) 39
IDENTIFICADOR (309) 6 7 8 9 10 11 12 18 20 60 64 66 71 76 90 101 104
    116 125 128
CTEENTERA (310) 24 56 117
CTETEXTO (311) 59 119
CTEBOOLEANO (312) 58
CTEDECIMAL (313) 25 57 118


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
programa (60)
    on left: 1, on right: 0
variables_globales (61)
    on left: 2, on right: 1
bloque_variables (62)
    on left: 3, on right: 2 67 91
bloque_variables_rep (63)
    on left: 4 5, on right: 3 5
declara_variables (64)
    on left: 6 7 8 9 10 11 12, on right: 5
declara_variables_atomica (65)
    on left: 13 14, on right: 6 7 8 9
declara_variables_matriz (66)
    on left: 15 16, on right: 10 11
declara_variables_matriz1 (67)
    on left: 17 18, on right: 16
declara_variables_objeto (68)
    on left: 19 20, on right: 12
asignacion_matriz (69)
    on left: 21, on right: 17 105
asignacion_matriz_rep (70)
    on left: 22 23, on right: 21 23
asignacion_matriz_valor (71)
    on left: 24 25, on right: 23 27
asignacion_matriz_valor1 (72)
    on left: 26 27, on right: 24 25
dimensiones (73)
    on left: 28, on right: 10 11 102 108 122
dimensiones_rep (74)
    on left: 29 30, on right: 28
expresion (75)
    on left: 31, on right: 14 50 102 106 125 129 130 133 135
expresion_condicional (76)
    on left: 32 33, on right: 31
op_booleanos (77)
    on left: 34 35 36 37 38 39 40 41, on right: 33
exp (78)
    on left: 42, on right: 28 30 31 33 44 45
exp_suma_resta (79)
    on left: 43 44 45, on right: 42
termino (80)
    on left: 46, on right: 42 48 49
termino_multi_divide (81)
    on left: 47 48 49, on right: 46
factor (82)
    on left: 50 51 52 53, on right: 46
factor_operando (83)
    on left: 54 55, on right: 51 52 53
var_cte (84)
    on left: 56 57 58 59 60, on right: 54
declara_objetos (85)
    on left: 61, on right: 1
declara_objetos_rep (86)
    on left: 62 63, on right: 61 63
objeto (87)
    on left: 64, on right: 63
objeto_herencia (88)
    on left: 65 66, on right: 64
atributos_globales (89)
    on left: 67, on right: 64
declara_funciones (90)
    on left: 68, on right: 1 64
declara_funciones_rep (91)
    on left: 69 70, on right: 68 70
declaracion_prototipos (92)
    on left: 71, on right: 70
permiso (93)
    on left: 72 73, on right: 71
parametros (94)
    on left: 74 75, on right: 71 90
parametros_rep (95)
    on left: 76, on right: 75 84
tipo (96)
    on left: 77 78 79 80 81 82, on right: 76 85
parametros_rep1 (97)
    on left: 83 84, on right: 76
declaracion_prototipos_regresa (98)
    on left: 85 86, on right: 71
implementa_funciones (99)
    on left: 87, on right: 1 64
implementa_funciones_rep (100)
    on left: 88 89, on right: 87 89
funciones (101)
    on left: 90, on right: 89
variables_locales (102)
    on left: 91, on right: 1 90
bloque (103)
    on left: 92 93, on right: 1 90 94 130 133 134 135
bloque_rep (104)
    on left: 94, on right: 93
estatuto (105)
    on left: 95 96 97 98 99 100, on right: 93
asignacion (106)
    on left: 101, on right: 95
asignacion1 (107)
    on left: 102 103 104, on right: 101
asignacion2 (108)
    on left: 105 106, on right: 103 104
asignacion3 (109)
    on left: 107 108, on right: 104
lectura (110)
    on left: 109, on right: 126
lectura1 (111)
    on left: 110 111 112 113, on right: 109
escritura (112)
    on left: 114, on right: 96
escritura_valores (113)
    on left: 115 116, on right: 114 121 124
valores (114)
    on left: 117 118 119, on right: 115
escritura_valores1 (115)
    on left: 120 121 122, on right: 116
escritura_concatena (116)
    on left: 123 124, on right: 115 122
llama_funcion (117)
    on left: 125 126, on right: 55 97
llama_funcion_opcional (118)
    on left: 127 128, on right: 125
regresa (119)
    on left: 129, on right: 98
condicional (120)
    on left: 130, on right: 99
condicional_ifelse (121)
    on left: 131 132, on right: 130 133
condicional_else (122)
    on left: 133 134, on right: 132
ciclo (123)
    on left: 135, on right: 100


state 0

    0 $accept: . programa $end

    VARIABLES_GLOBALES  shift, and go to state 1

    programa            go to state 2
    variables_globales  go to state 3


state 1

    2 variables_globales: VARIABLES_GLOBALES . bloque_variables

    ACORCHETE  shift, and go to state 4

    bloque_variables  go to state 5


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 6


state 3

    1 programa: variables_globales . declara_objetos declara_funciones implementa_funciones EJECUTARPROGRAMA ALLAVE variables_locales bloque CLLAVE

    DECLARA_OBJETOS  shift, and go to state 7

    declara_objetos  go to state 8


state 4

    3 bloque_variables: ACORCHETE . bloque_variables_rep CCORCHETE

    CREAROBJETO    shift, and go to state 9
    BOOLEANO       shift, and go to state 10
    ENTERO         shift, and go to state 11
    DECIMAL        shift, and go to state 12
    TEXTO          shift, and go to state 13
    MATRIZENTERA   shift, and go to state 14
    MATRIZDECIMAL  shift, and go to state 15

    $default  reduce using rule 4 (bloque_variables_rep)

    bloque_variables_rep  go to state 16
    declara_variables     go to state 17


state 5

    2 variables_globales: VARIABLES_GLOBALES bloque_variables .

    $default  reduce using rule 2 (variables_globales)


state 6

    0 $accept: programa $end .

    $default  accept


state 7

   61 declara_objetos: DECLARA_OBJETOS . ACORCHETE declara_objetos_rep CCORCHETE

    ACORCHETE  shift, and go to state 18


state 8

    1 programa: variables_globales declara_objetos . declara_funciones implementa_funciones EJECUTARPROGRAMA ALLAVE variables_locales bloque CLLAVE

    DECLARA_FUNCIONES  shift, and go to state 19

    declara_funciones  go to state 20


state 9

   12 declara_variables: CREAROBJETO . IDENTIFICADOR declara_variables_objeto

    IDENTIFICADOR  shift, and go to state 21


state 10

    9 declara_variables: BOOLEANO . IDENTIFICADOR declara_variables_atomica

    IDENTIFICADOR  shift, and go to state 22


state 11

    6 declara_variables: ENTERO . IDENTIFICADOR declara_variables_atomica

    IDENTIFICADOR  shift, and go to state 23


state 12

    7 declara_variables: DECIMAL . IDENTIFICADOR declara_variables_atomica

    IDENTIFICADOR  shift, and go to state 24


state 13

    8 declara_variables: TEXTO . IDENTIFICADOR declara_variables_atomica

    IDENTIFICADOR  shift, and go to state 25


state 14

   11 declara_variables: MATRIZENTERA . IDENTIFICADOR dimensiones declara_variables_matriz

    IDENTIFICADOR  shift, and go to state 26


state 15

   10 declara_variables: MATRIZDECIMAL . IDENTIFICADOR dimensiones declara_variables_matriz

    IDENTIFICADOR  shift, and go to state 27


state 16

    3 bloque_variables: ACORCHETE bloque_variables_rep . CCORCHETE

    CCORCHETE  shift, and go to state 28


state 17

    5 bloque_variables_rep: declara_variables . bloque_variables_rep

    CREAROBJETO    shift, and go to state 9
    BOOLEANO       shift, and go to state 10
    ENTERO         shift, and go to state 11
    DECIMAL        shift, and go to state 12
    TEXTO          shift, and go to state 13
    MATRIZENTERA   shift, and go to state 14
    MATRIZDECIMAL  shift, and go to state 15

    $default  reduce using rule 4 (bloque_variables_rep)

    bloque_variables_rep  go to state 29
    declara_variables     go to state 17


state 18

   61 declara_objetos: DECLARA_OBJETOS ACORCHETE . declara_objetos_rep CCORCHETE

    CLASE  shift, and go to state 30

    $default  reduce using rule 62 (declara_objetos_rep)

    declara_objetos_rep  go to state 31
    objeto               go to state 32


state 19

   68 declara_funciones: DECLARA_FUNCIONES . ACORCHETE declara_funciones_rep CCORCHETE

    ACORCHETE  shift, and go to state 33


state 20

    1 programa: variables_globales declara_objetos declara_funciones . implementa_funciones EJECUTARPROGRAMA ALLAVE variables_locales bloque CLLAVE

    IMPLEMENTA_FUNCIONES  shift, and go to state 34

    implementa_funciones  go to state 35


state 21

   12 declara_variables: CREAROBJETO IDENTIFICADOR . declara_variables_objeto

    ES          shift, and go to state 36
    PUNTOYCOMA  shift, and go to state 37
